--- a/EcoCareApp/EcoCareApp/Views/CarbonFootprintPopUp.xaml
+++ b/EcoCareApp/EcoCareApp/Views/CarbonFootprintPopUp.xaml
@@ -10,7 +10,7 @@
                 <RowDefinition Height="200"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
-            <Label Text="{Binding CarbonFootPrint, StringFormat='Your carbon footprint is {0:F0} CO2'}" FontFamily="Amatic"
+            <Label Text="{Binding CarbonFootPrint, StringFormat='Your carbon footprint is {0:N0} CO2'}" FontFamily="Amatic"
                    FontSize="25" HorizontalOptions="StartAndExpand" Grid.Row="0"/>
         <Image Source="footprint_popup.png" Grid.Row="1"/>
         <Button Text="Close" Command="{Binding PopUpClosed}" Grid.Row="2"/>
