--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -120,9 +120,8 @@
 
             <xtools:TabViewItem Icon="shopping_cart_bw.png" IconSelected="shopping_cart.png">
                 <xtools:TabViewItem.Content>
-                    <local:Products>
 
-                    </local:Products>
+                    <local:Products/>
 
                 </xtools:TabViewItem.Content>
             </xtools:TabViewItem>
