--- a/EcoCareApp/EcoCareApp/Views/EditProduct.xaml
+++ b/EcoCareApp/EcoCareApp/Views/EditProduct.xaml
@@ -3,42 +3,62 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:EditProductViewModel"
              x:Class="EcoCareApp.Views.EditProduct">
     <ContentPage.Content>
-        <StackLayout>
+        <Grid Style="{StaticResource SignUpG}" >
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <!--Image-->
+                <RowDefinition></RowDefinition>
+                <!--Div-->
+            </Grid.RowDefinitions>
+            <Grid Padding="0">
+                <Image Source="{Binding ImageSource}" Aspect="AspectFill"/>
+                <!--Image-->
+            </Grid>
+            <Grid Style="{StaticResource logInSignUpDivG}" >
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Frame Grid.Row="2" Style="{StaticResource logInSignUp}" >
+                    <!--Div/Box-->
 
-            <ScrollView>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="100"/>
-                        <RowDefinition Height="100"/>
-                        <RowDefinition Height="50"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="120"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                    <ScrollView>
 
-                    <Label Text="Title:" Grid.Row="0" Grid.Column="0" Style="{StaticResource labelNameStyle}"/>
-                    <Entry Text="{Binding Title}" HorizontalTextAlignment="Center" FontSize="Medium"
+                        <ScrollView>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="100"/>
+                                    <RowDefinition Height="100"/>
+                                    <RowDefinition Height="50"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="120"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Label Text="Title:" Grid.Row="0" Grid.Column="0" Style="{StaticResource labelNameStyle}"/>
+                                <Entry Text="{Binding Title}" HorizontalTextAlignment="Center" FontSize="Medium"
                            Grid.Column="1" Grid.Row="0"/>
-                    
-                    <Label Text="Image Source:" Grid.Row="1" Grid.Column="0" />
 
-                    <Editor Text="{Binding ImageSource}" WidthRequest="400" HeightRequest="400"
+                                <Label Text="Image Source:" Grid.Row="1" Grid.Column="0" />
+
+                                <Editor Text="{Binding ImageSource}" WidthRequest="400" HeightRequest="400"
                            Grid.Row="1" Grid.Column="1"/>
 
-                    <Label Text="Item Description:" Grid.Row="2" Grid.Column="0" />
+                                <Label Text="Item Description:" Grid.Row="2" Grid.Column="0" />
 
-                    <Editor Text="{Binding Description}" FontSize="Body"
+                                <Editor Text="{Binding Description}" FontSize="Body"
                            Grid.Row="2" Grid.Column="1"/>
 
-                    <Button x:Name="save" Text="Save Changes!" 
+                                <Button x:Name="save" Text="Save Changes!" 
                VerticalOptions="Start" HorizontalOptions="FillAndExpand"
                 Command="{Binding Update}" Grid.Row="3" Grid.ColumnSpan="2"/>
-                </Grid>
+                            </Grid>
 
-            </ScrollView>
-
-        </StackLayout>
+                        </ScrollView>
+                    </ScrollView>
+                </Frame>
+            </Grid>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
