--- a/EcoCareApp/EcoCareApp/Views/AddProduct.xaml
+++ b/EcoCareApp/EcoCareApp/Views/AddProduct.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:AddProductViewModel"
-             x:Class="EcoCareApp.Views.AddProduct">
+             x:Class="EcoCareApp.Views.AddProduct"
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <Grid Style="{StaticResource SignUpG}" >
             <Grid.RowDefinitions>
